// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should match snapshot 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <div
          class="ant-row css-dev-only-do-not-override-1odpy5d"
          style="margin-left: -12px; margin-right: -12px;"
        >
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              aria-label="segmented control"
              class="ant-segmented ant-segmented-shape-round css-dev-only-do-not-override-1odpy5d"
              role="radiogroup"
              tabindex="0"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="true"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="sun"
                        class="anticon anticon-sun"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="sun"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M548 818v126a16 16 0 01-16 16h-40a16 16 0 01-16-16V818c15.85 1.64 27.84 2.46 36 2.46 8.15 0 20.16-.82 36-2.46m205.25-115.66l89.1 89.1a16 16 0 010 22.62l-28.29 28.29a16 16 0 01-22.62 0l-89.1-89.1c12.37-10.04 21.43-17.95 27.2-23.71 5.76-5.77 13.67-14.84 23.71-27.2m-482.5 0c10.04 12.36 17.95 21.43 23.71 27.2 5.77 5.76 14.84 13.67 27.2 23.71l-89.1 89.1a16 16 0 01-22.62 0l-28.29-28.29a16 16 0 010-22.63zM512 278c129.24 0 234 104.77 234 234S641.24 746 512 746 278 641.24 278 512s104.77-234 234-234m0 72c-89.47 0-162 72.53-162 162s72.53 162 162 162 162-72.53 162-162-72.53-162-162-162M206 476c-1.64 15.85-2.46 27.84-2.46 36 0 8.15.82 20.16 2.46 36H80a16 16 0 01-16-16v-40a16 16 0 0116-16zm738 0a16 16 0 0116 16v40a16 16 0 01-16 16H818c1.64-15.85 2.46-27.84 2.46-36 0-8.15-.82-20.16-2.46-36zM814.06 180.65l28.29 28.29a16 16 0 010 22.63l-89.1 89.09c-10.04-12.37-17.95-21.43-23.71-27.2-5.77-5.76-14.84-13.67-27.2-23.71l89.1-89.1a16 16 0 0122.62 0m-581.5 0l89.1 89.1c-12.37 10.04-21.43 17.95-27.2 23.71-5.76 5.77-13.67 14.84-23.71 27.2l-89.1-89.1a16 16 0 010-22.62l28.29-28.29a16 16 0 0122.62 0M532 64a16 16 0 0116 16v126c-15.85-1.64-27.84-2.46-36-2.46-8.15 0-20.16.82-36 2.46V80a16 16 0 0116-16z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="false"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="moon"
                        class="anticon anticon-moon"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="moon"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M489.5 111.66c30.65-1.8 45.98 36.44 22.58 56.33A243.35 243.35 0 00426 354c0 134.76 109.24 244 244 244 72.58 0 139.9-31.83 186.01-86.08 19.87-23.38 58.07-8.1 56.34 22.53C900.4 745.82 725.15 912 512.5 912 291.31 912 112 732.69 112 511.5c0-211.39 164.29-386.02 374.2-399.65l.2-.01zm-81.15 79.75l-4.11 1.36C271.1 237.94 176 364.09 176 511.5 176 697.34 326.66 848 512.5 848c148.28 0 274.94-96.2 319.45-230.41l.63-1.93-.11.07a307.06 307.06 0 01-159.73 46.26L670 662c-170.1 0-308-137.9-308-308 0-58.6 16.48-114.54 46.27-162.47z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <span
              class="ant-typography ant-dropdown-trigger css-dev-only-do-not-override-1odpy5d"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1odpy5d"
              >
                <img
                  alt="User avatar"
                  src="https://www.gravatar.com/avatar/image"
                />
              </span>
               
              <span
                class="hide-sm-down"
              >
                test/username
              </span>
               
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header component should match snapshot for unauthenticated 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <div
          class="ant-row css-dev-only-do-not-override-1odpy5d"
          style="margin-left: -12px; margin-right: -12px;"
        >
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              aria-label="segmented control"
              class="ant-segmented ant-segmented-shape-round css-dev-only-do-not-override-1odpy5d"
              role="radiogroup"
              tabindex="0"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="true"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="sun"
                        class="anticon anticon-sun"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="sun"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M548 818v126a16 16 0 01-16 16h-40a16 16 0 01-16-16V818c15.85 1.64 27.84 2.46 36 2.46 8.15 0 20.16-.82 36-2.46m205.25-115.66l89.1 89.1a16 16 0 010 22.62l-28.29 28.29a16 16 0 01-22.62 0l-89.1-89.1c12.37-10.04 21.43-17.95 27.2-23.71 5.76-5.77 13.67-14.84 23.71-27.2m-482.5 0c10.04 12.36 17.95 21.43 23.71 27.2 5.77 5.76 14.84 13.67 27.2 23.71l-89.1 89.1a16 16 0 01-22.62 0l-28.29-28.29a16 16 0 010-22.63zM512 278c129.24 0 234 104.77 234 234S641.24 746 512 746 278 641.24 278 512s104.77-234 234-234m0 72c-89.47 0-162 72.53-162 162s72.53 162 162 162 162-72.53 162-162-72.53-162-162-162M206 476c-1.64 15.85-2.46 27.84-2.46 36 0 8.15.82 20.16 2.46 36H80a16 16 0 01-16-16v-40a16 16 0 0116-16zm738 0a16 16 0 0116 16v40a16 16 0 01-16 16H818c1.64-15.85 2.46-27.84 2.46-36 0-8.15-.82-20.16-2.46-36zM814.06 180.65l28.29 28.29a16 16 0 010 22.63l-89.1 89.09c-10.04-12.37-17.95-21.43-23.71-27.2-5.77-5.76-14.84-13.67-27.2-23.71l89.1-89.1a16 16 0 0122.62 0m-581.5 0l89.1 89.1c-12.37 10.04-21.43 17.95-27.2 23.71-5.76 5.77-13.67 14.84-23.71 27.2l-89.1-89.1a16 16 0 010-22.62l28.29-28.29a16 16 0 0122.62 0M532 64a16 16 0 0116 16v126c-15.85-1.64-27.84-2.46-36-2.46-8.15 0-20.16.82-36 2.46V80a16 16 0 0116-16z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="false"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="moon"
                        class="anticon anticon-moon"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="moon"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M489.5 111.66c30.65-1.8 45.98 36.44 22.58 56.33A243.35 243.35 0 00426 354c0 134.76 109.24 244 244 244 72.58 0 139.9-31.83 186.01-86.08 19.87-23.38 58.07-8.1 56.34 22.53C900.4 745.82 725.15 912 512.5 912 291.31 912 112 732.69 112 511.5c0-211.39 164.29-386.02 374.2-399.65l.2-.01zm-81.15 79.75l-4.11 1.36C271.1 237.94 176 364.09 176 511.5 176 697.34 326.66 848 512.5 848c148.28 0 274.94-96.2 319.45-230.41l.63-1.93-.11.07a307.06 307.06 0 01-159.73 46.26L670 662c-170.1 0-308-137.9-308-308 0-58.6 16.48-114.54 46.27-162.47z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <a
              class="ant-typography text-white css-dev-only-do-not-override-1odpy5d"
            >
              Sign in
            </a>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header component should match snapshot with avatar_path 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <div
          class="ant-row css-dev-only-do-not-override-1odpy5d"
          style="margin-left: -12px; margin-right: -12px;"
        >
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              aria-label="segmented control"
              class="ant-segmented ant-segmented-shape-round css-dev-only-do-not-override-1odpy5d"
              role="radiogroup"
              tabindex="0"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="true"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="sun"
                        class="anticon anticon-sun"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="sun"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M548 818v126a16 16 0 01-16 16h-40a16 16 0 01-16-16V818c15.85 1.64 27.84 2.46 36 2.46 8.15 0 20.16-.82 36-2.46m205.25-115.66l89.1 89.1a16 16 0 010 22.62l-28.29 28.29a16 16 0 01-22.62 0l-89.1-89.1c12.37-10.04 21.43-17.95 27.2-23.71 5.76-5.77 13.67-14.84 23.71-27.2m-482.5 0c10.04 12.36 17.95 21.43 23.71 27.2 5.77 5.76 14.84 13.67 27.2 23.71l-89.1 89.1a16 16 0 01-22.62 0l-28.29-28.29a16 16 0 010-22.63zM512 278c129.24 0 234 104.77 234 234S641.24 746 512 746 278 641.24 278 512s104.77-234 234-234m0 72c-89.47 0-162 72.53-162 162s72.53 162 162 162 162-72.53 162-162-72.53-162-162-162M206 476c-1.64 15.85-2.46 27.84-2.46 36 0 8.15.82 20.16 2.46 36H80a16 16 0 01-16-16v-40a16 16 0 0116-16zm738 0a16 16 0 0116 16v40a16 16 0 01-16 16H818c1.64-15.85 2.46-27.84 2.46-36 0-8.15-.82-20.16-2.46-36zM814.06 180.65l28.29 28.29a16 16 0 010 22.63l-89.1 89.09c-10.04-12.37-17.95-21.43-23.71-27.2-5.77-5.76-14.84-13.67-27.2-23.71l89.1-89.1a16 16 0 0122.62 0m-581.5 0l89.1 89.1c-12.37 10.04-21.43 17.95-27.2 23.71-5.76 5.77-13.67 14.84-23.71 27.2l-89.1-89.1a16 16 0 010-22.62l28.29-28.29a16 16 0 0122.62 0M532 64a16 16 0 0116 16v126c-15.85-1.64-27.84-2.46-36-2.46-8.15 0-20.16.82-36 2.46V80a16 16 0 0116-16z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="false"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="moon"
                        class="anticon anticon-moon"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="moon"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M489.5 111.66c30.65-1.8 45.98 36.44 22.58 56.33A243.35 243.35 0 00426 354c0 134.76 109.24 244 244 244 72.58 0 139.9-31.83 186.01-86.08 19.87-23.38 58.07-8.1 56.34 22.53C900.4 745.82 725.15 912 512.5 912 291.31 912 112 732.69 112 511.5c0-211.39 164.29-386.02 374.2-399.65l.2-.01zm-81.15 79.75l-4.11 1.36C271.1 237.94 176 364.09 176 511.5 176 697.34 326.66 848 512.5 848c148.28 0 274.94-96.2 319.45-230.41l.63-1.93-.11.07a307.06 307.06 0 01-159.73 46.26L670 662c-170.1 0-308-137.9-308-308 0-58.6 16.48-114.54 46.27-162.47z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <span
              class="ant-typography ant-dropdown-trigger css-dev-only-do-not-override-1odpy5d"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-1odpy5d"
              >
                <img
                  alt="User avatar"
                  src="https://www.themoviedb.org/t/p/w32_and_h32_face/image"
                />
              </span>
               
              <span
                class="hide-sm-down"
              >
                test/username
              </span>
               
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header component should match snapshot with empty account 1`] = `
<DocumentFragment>
  <header
    class="ant-layout-header css-dev-only-do-not-override-1odpy5d"
  >
    <div
      class="ant-row ant-row-space-between css-dev-only-do-not-override-1odpy5d"
    >
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <a
          class="logo text-white"
          data-discover="true"
          href="/"
        >
          The Movie DB
        </a>
      </div>
      <div
        class="ant-col css-dev-only-do-not-override-1odpy5d"
      >
        <div
          class="ant-row css-dev-only-do-not-override-1odpy5d"
          style="margin-left: -12px; margin-right: -12px;"
        >
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <div
              aria-label="segmented control"
              class="ant-segmented ant-segmented-shape-round css-dev-only-do-not-override-1odpy5d"
              role="radiogroup"
              tabindex="0"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="true"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="sun"
                        class="anticon anticon-sun"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="sun"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M548 818v126a16 16 0 01-16 16h-40a16 16 0 01-16-16V818c15.85 1.64 27.84 2.46 36 2.46 8.15 0 20.16-.82 36-2.46m205.25-115.66l89.1 89.1a16 16 0 010 22.62l-28.29 28.29a16 16 0 01-22.62 0l-89.1-89.1c12.37-10.04 21.43-17.95 27.2-23.71 5.76-5.77 13.67-14.84 23.71-27.2m-482.5 0c10.04 12.36 17.95 21.43 23.71 27.2 5.77 5.76 14.84 13.67 27.2 23.71l-89.1 89.1a16 16 0 01-22.62 0l-28.29-28.29a16 16 0 010-22.63zM512 278c129.24 0 234 104.77 234 234S641.24 746 512 746 278 641.24 278 512s104.77-234 234-234m0 72c-89.47 0-162 72.53-162 162s72.53 162 162 162 162-72.53 162-162-72.53-162-162-162M206 476c-1.64 15.85-2.46 27.84-2.46 36 0 8.15.82 20.16 2.46 36H80a16 16 0 01-16-16v-40a16 16 0 0116-16zm738 0a16 16 0 0116 16v40a16 16 0 01-16 16H818c1.64-15.85 2.46-27.84 2.46-36 0-8.15-.82-20.16-2.46-36zM814.06 180.65l28.29 28.29a16 16 0 010 22.63l-89.1 89.09c-10.04-12.37-17.95-21.43-23.71-27.2-5.77-5.76-14.84-13.67-27.2-23.71l89.1-89.1a16 16 0 0122.62 0m-581.5 0l89.1 89.1c-12.37 10.04-21.43 17.95-27.2 23.71-5.76 5.77-13.67 14.84-23.71 27.2l-89.1-89.1a16 16 0 010-22.62l28.29-28.29a16 16 0 0122.62 0M532 64a16 16 0 0116 16v126c-15.85-1.64-27.84-2.46-36-2.46-8.15 0-20.16.82-36 2.46V80a16 16 0 0116-16z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    name="test-id"
                    type="radio"
                  />
                  <div
                    aria-selected="false"
                    class="ant-segmented-item-label"
                  >
                    <span
                      class="ant-segmented-item-icon"
                    >
                      <span
                        aria-label="moon"
                        class="anticon anticon-moon"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="moon"
                          fill="currentColor"
                          fill-rule="evenodd"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M489.5 111.66c30.65-1.8 45.98 36.44 22.58 56.33A243.35 243.35 0 00426 354c0 134.76 109.24 244 244 244 72.58 0 139.9-31.83 186.01-86.08 19.87-23.38 58.07-8.1 56.34 22.53C900.4 745.82 725.15 912 512.5 912 291.31 912 112 732.69 112 511.5c0-211.39 164.29-386.02 374.2-399.65l.2-.01zm-81.15 79.75l-4.11 1.36C271.1 237.94 176 364.09 176 511.5 176 697.34 326.66 848 512.5 848c148.28 0 274.94-96.2 319.45-230.41l.63-1.93-.11.07a307.06 307.06 0 01-159.73 46.26L670 662c-170.1 0-308-137.9-308-308 0-58.6 16.48-114.54 46.27-162.47z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            class="ant-col css-dev-only-do-not-override-1odpy5d"
            style="padding-left: 12px; padding-right: 12px;"
          >
            <span
              class="ant-typography ant-dropdown-trigger css-dev-only-do-not-override-1odpy5d"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-icon css-dev-only-do-not-override-1odpy5d"
              >
                <span
                  aria-label="user"
                  class="anticon anticon-user"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="user"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                    />
                  </svg>
                </span>
              </span>
               
              <span
                class="hide-sm-down"
              >
                Username
              </span>
               
              <span
                aria-label="caret-down"
                class="anticon anticon-caret-down"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="caret-down"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                  />
                </svg>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
